--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie"
         tools:targetApi="31">
         <activity
-            android:name=".ResultActivity"
+            android:name=".`02_ResultActivity`"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".`01_MainActivity`"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
