--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie"
         tools:targetApi="31">
-        <activity android:name=".Ch3_DiaryActivity"
+        <activity
+            android:name=".Ch3_MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie.NoActionBar"/>
+            android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie.NoActionBar" />
+        <activity
+            android:name=".Ch3_DiaryActivity"
+            android:exported="false"
+            android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie.NoActionBar" />
         <activity
             android:name=".Ch2_MainActivity"
             android:exported="false" />
@@ -26,8 +31,7 @@
             android:name=".Ch1_ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".Ch3_MainActivity"
-            android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie.NoActionBar"
+            android:name=".Ch4_MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
