--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie"
         tools:targetApi="31">
         <activity
+            android:name=".Ch5_PhotoFrameActivity"
+            android:exported="false" />
+        <activity
             android:name=".Ch4_MainActivity"
             android:exported="false" />
         <activity
