Ch9_푸시 알림 수신기 - 01

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie"
         tools:targetApi="31">
         <activity
+            android:name=".Ch8_MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".Ch7_MainActivity"
             android:exported="false" />
         <activity
@@ -52,7 +55,7 @@
             android:name=".Ch1_ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".Ch8_MainActivity"
+            android:name=".Ch9_MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
