--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".Ch11_AlarmReceiver"
+            android:exported="false" />
+
         <service
             android:name=".Ch9_MyFirebaseMessagingService"
             android:exported="false">
