Ch12_도서 리뷰 앱 - 01

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-config-ktx:21.1.1'
 //    implementation 'com.google.firebase:firebase-analytics-ktx:21.1.0'
 
+    // Ch12 retrofit 설정
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
