--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.30개프로젝트로배우는Android앱개발WithKotlie"
         tools:targetApi="31">
+        <activity
+            android:name=".Ch11_MainActivity"
+            android:exported="false" />
         <activity
             android:name=".Ch10_MainActivity"
             android:exported="false" />
@@ -61,7 +64,7 @@
             android:name=".Ch1_ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".Ch11_MainActivity"
+            android:name=".Ch12_MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -70,7 +73,8 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".Ch11_AlarmReceiver"
+        <receiver
+            android:name=".Ch11_AlarmReceiver"
             android:exported="false" />
 
         <service
