--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    // Ch12 viewBinding 설정
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
