--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,8 @@ dependencies {
     // Ch12 Glide 설정
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    // Ch12 Room 설정
+    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation 'androidx.room:room-runtime:2.4.3'
+
 }
