--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Ch12_MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".Ch12_DetailActivity"
             android:exported="false" />
         <activity
@@ -68,7 +71,7 @@
             android:name=".Ch1_ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".Ch12_MainActivity"
+            android:name=".Ch13_MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
