Ch13_틴더 - 미완성 (회원가입 구현 실패)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Ch13_LikeActivity"
+            android:exported="false" />
+        <activity
             android:name=".Ch13_LoginActivity"
             android:exported="true" />
         <activity
