--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    // Ch12 viewBinding 설정
+    // Ch12, 14 viewBinding 설정
     viewBinding {
         enabled = true
     }
@@ -67,7 +67,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    // Ch12 Glide 설정
+    // Ch12, 14 Glide 설정
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     // Ch12 Room 설정
