--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,33 +50,33 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Ch4 Room 설정
-    implementation "androidx.room:room-runtime:2.4.2"
-    kapt "androidx.room:room-compiler:2.4.2"
+//    implementation "androidx.room:room-runtime:2.4.2"
+//    kapt "androidx.room:room-compiler:2.4.2"
 
     // Ch9 파이어베이스 설정
-    implementation platform('com.google.firebase:firebase-bom:30.3.1')
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.7'
-    implementation 'com.google.firebase:firebase-analytics-ktx:21.1.0'
+//    implementation platform('com.google.firebase:firebase-bom:30.3.1')
+//    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.7'
+//    implementation 'com.google.firebase:firebase-analytics-ktx:21.1.0'
 
     // Ch10 파이어베이스 설정
 //    implementation platform('com.google.firebase:firebase-bom:30.3.2')
-    implementation 'com.google.firebase:firebase-config-ktx:21.1.1'
+//    implementation 'com.google.firebase:firebase-config-ktx:21.1.1'
 //    implementation 'com.google.firebase:firebase-analytics-ktx:21.1.0'
 
     // Ch12 retrofit 설정
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Ch12, 14 Glide 설정
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+//    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     // Ch12 Room 설정
-    kapt 'androidx.room:room-compiler:2.4.3'
-    implementation 'androidx.room:room-runtime:2.4.3'
+//    kapt 'androidx.room:room-compiler:2.4.3'
+//    implementation 'androidx.room:room-runtime:2.4.3'
 
     // Ch13 파이어베이스 설정
-    implementation platform('com.google.firebase:firebase-bom:30.3.2')
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
+//    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+//    implementation 'com.google.firebase:firebase-auth-ktx'
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
 }
