--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,9 @@ android {
         jvmTarget = '1.8'
     }
     // Ch12, 14 viewBinding 설정
-    viewBinding {
-        enabled = true
-    }
+//    viewBinding {
+//        enabled = true
+//    }
 }
 
 dependencies {
