--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     // Ch15 Retrofit 설정
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Ch15 Glide 설정
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
